# Plexa

./: bun.lockb  package.json  tailwind.config.js
src/: App.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: constants.rs  file_watcher.rs  main.rs  message_handler.rs  system_tray.rs  utils.rs
src/components/: OpenSettings.tsx  Preferences.tsx
src/components/ui/: scroll-area.tsx
src/contexts/: SettingsContext.tsx
